fix(style): adding additional queries to specifically target safari on iOS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -517,10 +517,15 @@ h1 {
 }
 }
 
-/* For Safari on iOS */
+/* For iOS */
 @supports (-webkit-touch-callout: none) {
+/* For Safari */
+	@media not all and (min-resolution:.001dpcm) { 
+    	@media {
 /*Using universal selector to ensure content doesn't exceed screen size*/
-.img_scale:active img, .img_scale:focus img {
-	transform: none;
+			.img_scale:active img, .img_scale:focus img {
+				transform: none;
+}
+}
 }
 }
